--- a/whiteMath/whiteMath.csproj
+++ b/whiteMath/whiteMath.csproj
@@ -209,17 +209,17 @@
     <Compile Include="WhiteMath\Algorithms\MathematicsTrigonometric.cs" />
     <Compile Include="WhiteMath\Algorithms\Messages.cs" />
     <Compile Include="WhiteMath\RationalNumbers\Rational.cs" />
-    <Compile Include="WhiteMath\Randoms\IRandomBoundedUnbounded.cs" />
-    <Compile Include="WhiteMath\Randoms\RandomCryptographic.cs" />
-    <Compile Include="WhiteMath\Randoms\RandomFunctionalityExtensions.cs" />
-    <Compile Include="WhiteMath\Randoms\RandomLaggedFibonacci.cs" />
-    <Compile Include="WhiteMath\Randoms\RandomLongIntModular.cs" />
-    <Compile Include="WhiteMath\Randoms\RandomLongIntModularUnoptimized.cs" />
-    <Compile Include="WhiteMath\Randoms\RandomLongIntQuick.cs" />
-    <Compile Include="WhiteMath\Randoms\RandomLongIntRejection.cs" />
-    <Compile Include="WhiteMath\Randoms\RandomMersenneTwister.cs" />
-    <Compile Include="WhiteMath\Randoms\RandomNormalBoxMuller.cs" />
-    <Compile Include="WhiteMath\Randoms\RandomStandard.cs" />
+    <Compile Include="WhiteMath\Random\IRandomBoundedUnbounded.cs" />
+    <Compile Include="WhiteMath\Random\RandomCryptographic.cs" />
+    <Compile Include="WhiteMath\Random\RandomFunctionalityExtensions.cs" />
+    <Compile Include="WhiteMath\Random\RandomLaggedFibonacci.cs" />
+    <Compile Include="WhiteMath\Random\RandomLongIntModular.cs" />
+    <Compile Include="WhiteMath\Random\RandomLongIntModularUnoptimized.cs" />
+    <Compile Include="WhiteMath\Random\RandomLongIntQuick.cs" />
+    <Compile Include="WhiteMath\Random\RandomLongIntRejection.cs" />
+    <Compile Include="WhiteMath\Random\RandomMersenneTwister.cs" />
+    <Compile Include="WhiteMath\Random\RandomNormalBoxMuller.cs" />
+    <Compile Include="WhiteMath\Random\RandomStandard.cs" />
     <Compile Include="WhiteMath\Numeric\IConvertible.cs" />
     <Compile Include="WhiteMath\Numeric\IMetricProvider.cs" />
     <Compile Include="WhiteMath\Numeric\Interval.cs" />
@@ -385,16 +385,16 @@
     <Compile Include="WhiteMath\Functions\ExpressionNodes\ExpressionNode.cs" />
     <Compile Include="WhiteMath\Functions\ExpressionNodes\ExpressionHelper.cs" />
     <Compile Include="WhiteMath\Matrices\IndexPair.cs" />
-    <Compile Include="WhiteMath\Randoms\IRandomUnbounded.cs" />
-    <Compile Include="WhiteMath\Randoms\IRandomBounded.cs" />
-    <Compile Include="WhiteMath\Randoms\IRandomUnitInterval.cs" />
-    <Compile Include="WhiteMath\Randoms\IRandomBytes.cs" />
-    <Compile Include="WhiteMath\Randoms\IRandomUpperBounded.cs" />
-    <Compile Include="WhiteMath\Randoms\Extensibility\RandomUnitIntervalToBoundedWrapper.cs" />
-    <Compile Include="WhiteMath\Randoms\Extensibility\RandomUnitIntervalToUnboundedWrapper.cs" />
-    <Compile Include="WhiteMath\Randoms\Extensibility\RandomUnitIntervalExtensions.cs" />
-    <Compile Include="WhiteMath\Randoms\Extensibility\RandomBoundedExtensions.cs" />
-    <Compile Include="WhiteMath\Randoms\Extensibility\RandomBoundedToUpperBoundedWrapper.cs" />
+    <Compile Include="WhiteMath\Random\IRandomUnbounded.cs" />
+    <Compile Include="WhiteMath\Random\IRandomBounded.cs" />
+    <Compile Include="WhiteMath\Random\IRandomUnitInterval.cs" />
+    <Compile Include="WhiteMath\Random\IRandomBytes.cs" />
+    <Compile Include="WhiteMath\Random\IRandomUpperBounded.cs" />
+    <Compile Include="WhiteMath\Random\Extensibility\RandomUnitIntervalToBoundedWrapper.cs" />
+    <Compile Include="WhiteMath\Random\Extensibility\RandomUnitIntervalToUnboundedWrapper.cs" />
+    <Compile Include="WhiteMath\Random\Extensibility\RandomUnitIntervalExtensions.cs" />
+    <Compile Include="WhiteMath\Random\Extensibility\RandomBoundedExtensions.cs" />
+    <Compile Include="WhiteMath\Random\Extensibility\RandomBoundedToUpperBoundedWrapper.cs" />
     <Compile Include="WhiteMath\Numeric\SpecialNumberType.cs" />
     <Compile Include="WhiteMath\Numeric\SpecialNumberHelper.cs" />
     <Compile Include="WhiteMath\Numeric\BoundedIntervalSplitOptions.cs" />
@@ -453,7 +453,7 @@
     <Folder Include="WhiteMath\Statistics\" />
     <Folder Include="WhiteMath\Algorithms\" />
     <Folder Include="WhiteMath\RationalNumbers\" />
-    <Folder Include="WhiteMath\Randoms\" />
+    <Folder Include="WhiteMath\Random\" />
     <Folder Include="WhiteMath\Numeric\" />
     <Folder Include="WhiteMath\NeuralNetworks\" />
     <Folder Include="WhiteMath\Matrices\" />
@@ -471,6 +471,7 @@
     <Folder Include="WhiteMath\ArithmeticLong\" />
     <Folder Include="WhiteMath\ArithmeticLong\Bases\" />
     <Folder Include="WhiteMath\Functions\ExpressionNodes\" />
-    <Folder Include="WhiteMath\Randoms\Extensibility\" />
+    <Folder Include="WhiteMath\Random\Extensibility\" />
+    <Folder Include="WhiteMath\Random\Distributions\" />
   </ItemGroup>
 </Project>
